# DoodleJumper

./: BG_Tile.cpp  BG_Tile.h  Bonus.cpp  Bonus.h  CMakeLists.txt  Camera.cpp  Camera.h  Game.cpp  Game.h  Random.cpp  Random.h  Stopwatch.cpp  Stopwatch.h  World.cpp  World.h  main.cpp
Google_tests/: CMakeLists.txt  RandomTest.cpp  StopwatchTest.cpp  gtestTest.cpp
Logic/: CMakeLists.txt  Entity.cpp  Entity.h  Observer.h  Random.cpp  Random.h  Stopwatch.cpp  Stopwatch.h  Subject.cpp  Subject.h
